--- a/index.html
+++ b/index.html
@@ -1,79 +1,59 @@
 <!DOCTYPE html>
 <html lang = "en">
-
-
 <head>
     <meta charset = "UTF-8">
-    <title>Chris's Personal Site</title>
+    <title>Chris Wilson</title>
+    <link href = "css/styles.css" rel = "stylesheet">
+    <link href = "/Personal%20Site/NewYearsEve.jpg" rel = "icon">
 </head>
-
-
 <body>
-<table cellspacing = "20">
-    <tr>
-        <td><img src = "NewYearsEve.jpg" width = "200" alt = "Chris profile picture"</td>
-        <td><h1><em><strong>Christopher R. Wilson</strong></em></h1>
-            <p><em>Founder and CEO of <strong>My Very Own Company</strong></em></p>
-            <p>This is my bio. I'm a pretty lucky guy, who finally quit drinking monsters</p></td>
-    </tr>
-</table>
+    <div class = "top-container">
+        <img alt = "cloud-img" class = "top-cloud" src = "images/cloud.png">
+        <h1>I'm Christopher</h1>
+        <h2><p class = "programmer">a <span class = "pro">pro</span>grammer.</p></h2>
+        <img alt = "cloud-img" class = "bottom-cloud" src = "images/cloud.png">
+        <img alt = "mountain-img" src = "images/mountain.png">
+    </div>
+
+    <div class="middle-container">
+        <div class="profile">
+            <img alt="" src="/me%20at%20halloween%20(2)-modified.png">
+            <h2>Hello.</h2>
+            <p class="intro">I am a full stack engineer, who plays keys in a band and dabbles in photography.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img alt="code-img" class="code-img"  src="/coding%20pic.jpg">
+                <h3>Design & Development</h3>
+                <p>I started learning to code while I was a high school choir director. I had many friends growing up who
+                   coded, and it always fascinated me. I began teaching Computer Science because you learn better and faster
+                   when you teach.</p>
+            </div>
+            <div class="skill-row">
+                <iframe alt="" class="airplane-img" src="https://giphy.com/embed/l3UchVwKGivcSyTaE"  frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+<!--                <img alt="" class="airplane-img" src="">-->
+                <h3>Paper Airplane origami extraordinaire</h3>
+                <p>I'm a master at making paper airplanes travel further than my competition</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>If you think you can throw paper airplanes better than me.</h3>
+            <p class="contact-message">If you are a jack-of-all-trades, master of none, let's talk about how we rule and the masters drool.</p>
+            <a class="btn" href="mailto:crwilson1@hotmail.com">CONTACT ME</a>
+        </div>
+    </div>
 
 
-<hr>
-<h3>Education</h3>
-<ul>
-    <li>UTSA</li>
-    <li>Baylor</li>
-    <li>Texas A&M</li>
-</ul>
-<hr>
-<p></p>
-<table>
-    <thead>
-    <tr>
-        <th>Dates</th>
-        <th>Work</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>2018 - 2021</td>
-        <td>Computer Science Teacher</td>
-    </tr>
-    <tr>
-        <td>2012 - 2018</td>
-        <td>Choir Teacher</td>
-    </tr>
-
-    </tbody>
-</table>
-<hr>
-
-<h3>Skills</h3>
-
-<table cellspacing = "20">
-    <tr>
-        <td>Music</td>
-        <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-        <td>Java</td>
-        <td>⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-        <td>Photography</td>
-        <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-        <td>Python</td>
-        <td>⭐⭐⭐</td>
-    </tr>
-</table>
-
-
-<hr>
-<p><a href = "Hobbies.html">My Hobbies</a>
-    <a href = "ContactMe.html">Contact Me</a></p>
+    <div class="bottom-container">
+        <a class="footer-link" href="www.linkedin.com/in/christopher-wilson-5a9ba745">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p class="copyright">© 2021 Name Surname.</p>
+    </div>
 
 
 </body>
